# libflatmax

./: .gitignore  LICENSE  pyproject.toml  readme.md
libflatmax/: comparison_utils.py  findMaxsMins3.m  findMaxsMins3.py  findMaxsMins3Comparison.py  findRampUps.m  findRampUps.py  findRampUpsComparison.py  findRampUpsDowns.m  findRampUpsDownsComparison.py
libflatmax/data/: getBTCKraken.py
