[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libflatmax"
version = "0.1.0"
description = "Algorithms"
authors = [{name = "Matt Flax", email = "flatmax@domain.name"}]
license = {text = "MIT"}

dependencies = [
    "numpy",
    "pandas",
    "krakenex",
    "matplotlib",
    "oct2py"
]
